--- a/hypr/input.conf
+++ b/hypr/input.conf
@@ -4,11 +4,14 @@ input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   # kb_layout = us,dk,eu
   kb_layout = de,us
-  kb_options = compose:caps,grp:alts_toggle
+  kb_options = compose:caps,grp:ctrl_alt_toggle
 
   # Change speed of keyboard repeat
   repeat_rate = 40
   repeat_delay = 600
+
+  # Start with numlock on by default
+  numlock_by_default = true
 
   # Increase sensitity for mouse/trackpack (default: 0)
   # sensitivity = 0.35
