--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -32,6 +32,8 @@
       "active": "󱓻"
     },
     "persistent-workspaces": {
+      "desc:Dell Inc. DELL U2722DE": [1, 2, 4, 6, 8],
+      "desc:Dell Inc. DELL U2721DE": [3, 5, 7, 9]
     }
   },
   "custom/omarchy": {
@@ -53,8 +55,8 @@
     "on-click": "alacritty -e btop"
   },
   "clock": {
-    "format": "{:%A %H:%M}",
-    "format-alt": "{:%d %B W%V %Y}",
+    "format": "{:L%A %H:%M}",
+    "format-alt": "{:L%d %B W%V %Y}",
     "tooltip-format": "<tt>{calendar}</tt>",
     "on-click-right": "omarchy-cmd-tzupdate",
     "calendar": {
@@ -69,7 +71,7 @@
         "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
         "today": "<span color='#ff6699'><b><u>{}</u></b></span>"
       }
-    },
+    }
   },
   "network": {
     "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"],
@@ -97,6 +99,7 @@
     "tooltip-format-discharging": "{power:>1.0f}W↓ {capacity}%",
     "tooltip-format-charging": "{power:>1.0f}W↑ {capacity}%",
     "interval": 5,
+    "on-click": "omarchy-menu power",
     "states": {
       "warning": 20,
       "critical": 10
