--- a/hypr/input.conf
+++ b/hypr/input.conf
@@ -3,7 +3,7 @@
 input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   # kb_layout = us,dk,eu
-  kb_layout = de,us
+  kb_layout = us,de
   kb_options = compose:caps,grp:ctrl_alt_toggle
 
   # Change speed of keyboard repeat
