--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -8,6 +8,7 @@
   "modules-center": ["clock", "custom/update"],
   "modules-right": [
     "group/tray-expander",
+    "hyprland/language",
     "bluetooth",
     "network",
     "pulseaudio",
@@ -35,6 +36,11 @@
       "desc:Dell Inc. DELL U2722DE": [1, 2, 4, 6, 8],
       "desc:Dell Inc. DELL U2721DE": [3, 5, 7, 9]
     }
+  },
+  // see https://github.com/basecamp/omarchy/discussions/111
+  "hyprland/language": {
+    "format": "{short}",
+    "on-click": "hyprctl switchxkblayout hl-virtual-keyboard next"
   },
   "custom/omarchy": {
     "format": "<span font='omarchy'>\ue900</span>",
