--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -4,6 +4,7 @@ background {
     monitor =
     color = $color
     path = ~/.config/omarchy/current/background
+    blur_passes = 3
 }
 
 animations {
