--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -62,7 +62,7 @@
     "on-click": "$TERMINAL -e btop"
   },
   "clock": {
-    "format": "{:L%A %H:%M}",
+    "format": "{:L%a %d %b W%V %H:%M}",
     "format-alt": "{:L%d %B W%V %Y}",
     "tooltip-format": "<tt>{calendar}</tt>",
     "on-click-right": "omarchy-cmd-tzupdate",
