fix Bitwarden rule

--- a/hypr/input.conf
+++ b/hypr/input.conf
@@ -31,8 +31,8 @@ input {
 # Scroll faster in the terminal
 windowrule = scrolltouchpad 1.5, tag:terminal
 
-windowrule = float,  initialTitle:.*Bitwarden.*
-windowrule = center, initialTitle:.*Bitwarden.*
+windowrule = float,  title:.*Bitwarden.*
+windowrule = center, title:.*Bitwarden.*
 
 # Enable touchpad gestures for changing workspaces
 # See https://wiki.hyprland.org/Configuring/Gestures/
