--- a/glazewm/config.yaml
+++ b/glazewm/config.yaml
@@ -185,7 +185,7 @@ window_effects:
       enabled: true
       # Can be something like '95%' or '0.95' for slightly transparent windows.
       # '0' or '0%' is fully transparent (and, by consequence, unfocusable).
-      opacity: '95%'
+      opacity: '97%'
 
   # Visual effects to apply to non-focused windows.
   other_windows:
@@ -199,7 +199,7 @@ window_effects:
       style: 'small_rounded'
     transparency:
       enabled: true
-      opacity: '95%'
+      opacity: '90%'
 
 window_behavior:
   # New windows are created in this state whenever possible.
@@ -281,17 +281,33 @@ window_rules:
       - window_process: { equals: 'idea64' }
         window_title: { equals: 'Add File to Git' }
       - window_process: { equals: 'idea64' }
+        window_title: { equals: 'Change Signature' }
+      - window_process: { equals: 'idea64' }
+        window_title: { equals: 'Choose Content to Paste' }
+      - window_process: { equals: 'idea64' }
         window_title: { equals: 'Conflicts' }
       - window_process: { equals: 'idea64' }
         window_title: { equals: 'Copy' }
+      - window_process: { equals: 'idea64' }
+        window_title: { equals: 'Copy Class' }
       - window_process: { equals: 'idea64' }
         window_title: { equals: 'Create New Branch' }
       - window_process: { equals: 'idea64' }
         window_title: { equals: 'Docker' }
       - window_process: { equals: 'idea64' }
+        window_title: { equals: 'Import Module' }
+      - window_process: { equals: 'idea64' }
         window_title: { equals: 'Manage Subscriptions' }
       - window_process: { equals: 'idea64' }
         window_title: { equals: 'Plugin Updates' }
+      - window_process: { equals: 'idea64' }
+        window_title: { equals: 'Project Structure' }
+      - window_process: { equals: 'idea64' }
+        window_title: { equals: 'Recent Files' }
+      - window_process: { equals: 'idea64' }
+        window_title: { equals: 'Rename' }
+      - window_process: { equals: 'idea64' }
+        window_title: { equals: 'Rename Variables' }
       - window_process: { equals: 'idea64' }
         window_title: { equals: 'Rollback Changes' }
       - window_process: { equals: 'idea64' }
@@ -300,6 +316,8 @@ window_rules:
         window_title: { equals: 'Settings' }
       - window_process: { equals: 'idea64' }
         window_title: { equals: 'Unshelve Changes' }
+      - window_process: { equals: 'idea64' }
+        window_title: { equals: 'Update Project' }
       - window_process: { equals: 'idea64' }
         window_title: { regex: 'Merge Revisions for .*' }
       - window_process: { equals: 'idea64' }
@@ -313,7 +331,7 @@ window_rules:
       - window_process: { equals: 'idea64' }
         window_title: { regex: 'Push Commits to .*' }
       - window_process: { equals: 'ms-teams' }
-        window_title: { regex: '.* | Microsoft Teamsx' }
+        window_title: { regex: 'Chat | .* | Microsoft Teams' }
 
 
 binding_modes:
@@ -354,30 +372,30 @@ keybindings:
     bindings: ['lwin+shift+down']
 
   # Resize focused window by a percentage or pixel amount.
-  - commands: ['resize --width -2%']
-    bindings: ['alt+u']
-  - commands: ['resize --width +2%']
-    bindings: ['alt+p']
-  - commands: ['resize --height +2%']
-    bindings: ['alt+o']
-  - commands: ['resize --height -2%']
-    bindings: ['alt+i']
+  - commands: ['resize --width -100']
+    bindings: ['lwin+oem_minus', 'rwin+oem_minus']
+  - commands: ['resize --width +100']
+    bindings: ['lwin+oem_plus', 'lwin+oem_plus']
+  - commands: ['resize --height -100']
+    bindings: ['lwin+shift+oem_minus', 'rwin+shift+oem_minus']
+  - commands: ['resize --height +100']
+    bindings: ['lwin+shift+oem_plus', 'lwin+shift+oem_plus']
 
   # As an alternative to the resize keybindings above, resize mode enables
   # resizing via arrow keys or HJKL. The binding mode is defined above with
   # the name 'resize'.
-  - commands: ['wm-enable-binding-mode --name resize']
-    bindings: ['alt+r']
+  # - commands: ['wm-enable-binding-mode --name resize']
+  #   bindings: ['alt+r']
 
   # Disables window management and all other keybindings until alt+shift+p
   # is pressed again.
-  - commands: ['wm-toggle-pause']
-    bindings: ['alt+shift+p']
+  # - commands: ['wm-toggle-pause']
+  #   bindings: ['alt+shift+p']
 
   # Change tiling direction. This determines where new tiling windows will
   # be inserted.
-  - commands: ['toggle-tiling-direction']
-    bindings: ['alt+v']
+  # - commands: ['toggle-tiling-direction']
+  #   bindings: ['alt+v']
 
   # Change focus from tiling windows -> floating -> fullscreen.
   #- commands: ['wm-cycle-focus']
@@ -389,7 +407,7 @@ keybindings:
 
   # Change the focused window to be tiling.
   - commands: ['toggle-tiling']
-    bindings: ['lwin+v']
+    bindings: ['lwin+v', 'rwin+v']
 
   # Change the focused window to be fullscreen.
   - commands: ['toggle-fullscreen']
@@ -454,13 +472,13 @@ keybindings:
   # Move the focused window's parent workspace to a monitor in a given
   # direction.
   - commands: ['move-workspace --direction left']
-    bindings: ['lwin+shift+q']
+    bindings: ['lwin+shift+h']
   - commands: ['move-workspace --direction right']
-    bindings: ['lwin+shift+f']
+    bindings: ['lwin+shift+l']
   - commands: ['move-workspace --direction up']
-    bindings: ['lwin+shift+d']
+    bindings: ['lwin+shift+k']
   - commands: ['move-workspace --direction down']
-    bindings: ['lwin+shift+s']
+    bindings: ['lwin+shift+j']
 
   # Move focused window to a workspace defined in `workspaces` config.
   - commands: ['move --workspace 1', 'focus --workspace 1']
