--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -1,9 +1,9 @@
 # Application bindings
-$terminal = uwsm app -- $TERMINAL
+$terminal = uwsm-app -- $TERMINAL
 $browser = omarchy-launch-browser
 
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
-bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
+bindd = SUPER, F, File manager, exec, uwsm-app -- nautilus --new-window
 bindd = SUPER, B, Browser, exec, $browser
 bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
 bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
@@ -18,14 +18,15 @@ bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
 bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
 bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google.com"
-bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://outlook.office.com/calendar"
+bindd = SUPER SHIFT, C, Calendar work, exec, omarchy-launch-webapp "https://outlook.office.com/calendar"
 bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://gmail.com"
-bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://outlook.office.com/mail"
+bindd = SUPER SHIFT, E, Email work, exec, omarchy-launch-webapp "https://outlook.office.com/mail"
 bindd = SUPER, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
 bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
 bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
 bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
 bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
+bindd = SUPER CTRL, V, Clipboard, exec, walker -m clipboard
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
