--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -22,14 +22,14 @@ input-field {
     outer_color = $outer_color
     outline_thickness = 4
 
-    font_family = CaskaydiaMono Nerd Font
+    font_family = CaskaydiaMono Nerd Font Italic
     font_color = $font_color
 
-    placeholder_text =   Enter Password 󰈷 
+    placeholder_text = Password
     check_color = $check_color
     fail_text = <i>$PAMFAIL ($ATTEMPTS)</i>
 
-    rounding = 0
+    rounding = 4
     shadow_passes = 0
     fade_on_empty = false
 }
