--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -16,5 +16,6 @@ decorations = "None"
 
 [keyboard]
 bindings = [
-{ key = "F11", action = "ToggleFullscreen" }
+{ key = "F11", action = "ToggleFullscreen" },
+{ key = "Insert", mods = "Shift", action = "Paste" }
 ]
