--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -1,4 +1,4 @@
 # Extra autostart processes
-# exec-once = uwsm app -- my-service
-exec-once = syncthing serve --no-browser
-exec-once = solaar --window=hide
+# exec-once = uwsm-app -- my-service
+exec-once = uwsm-app -- syncthing serve --no-browser
+exec-once = uwsm-app -- solaar --window=hide
