apply changes from omarchy files

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -14,11 +14,11 @@ bindd = SUPER, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- sign
 bindd = SUPER, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
 bindd = SUPER, SLASH, Passwords, exec, uwsm app -- 1password
 
-# If your web app url contains #, type it as ## to prevent hyprland treat it as comments
+# If your web app url contains #, type it as ## to prevent hyprland from treating it as a comment
 bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
 bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
-bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google.com"
-bindd = SUPER SHIFT, C, Calendar work, exec, omarchy-launch-webapp "https://outlook.office.com/calendar"
+bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google.com"
+#bindd = SUPER SHIFT, C, Calendar work, exec, omarchy-launch-webapp "https://outlook.office.com/calendar"
 bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://gmail.com"
 bindd = SUPER SHIFT, E, Email work, exec, omarchy-launch-webapp "https://outlook.office.com/mail"
 bindd = SUPER, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
