--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -66,7 +66,7 @@
     "format": "{:L%a %d %b W%V %H:%M}",
     "format-alt": "{:L%d %B W%V %Y}",
     "tooltip-format": "<tt>{calendar}</tt>",
-    "on-click-right": "omarchy-cmd-tzupdate",
+    "on-click-right": "omarchy-launch-floating-terminal-with-presentation omarchy-tz-select",
     "calendar": {
       "mode": "year",
       "mode-mon-col": 3,
