start Outlook with Garmin profile, add Teams keybinding

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -19,9 +19,10 @@ bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- 1password
 bindd = SUPER SHIFT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
 bindd = SUPER SHIFT ALT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
 bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://calendar.google.com"
-bindd = SUPER SHIFT ALT, C, Calendar work, exec, omarchy-launch-webapp "https://outlook.office.com/calendar"
+bindd = SUPER SHIFT ALT, C, Calendar work, exec, omarchy-launch-webapp "https://outlook.office.com/calendar" --user-data-dir=$HOME/.config/chromium-profile/garmin
 bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://gmail.com"
-bindd = SUPER SHIFT ALT, E, Email work, exec, omarchy-launch-webapp "https://outlook.office.com/mail"
+bindd = SUPER SHIFT ALT, E, Email work, exec, omarchy-launch-webapp "https://outlook.office.com/mail" --user-data-dir=$HOME/.config/chromium-profile/garmin
+bindd = SUPER SHIFT ALT, T, Teams work, exec, omarchy-launch-webapp "https://teams.microsoft.com/v2/" --user-data-dir=$HOME/.config/chromium-profile/garmin
 bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
 bindd = SUPER SHIFT ALT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
 bindd = SUPER SHIFT CTRL, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
