--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -46,6 +46,7 @@
   "custom/omarchy": {
     "format": "<span font='omarchy'>\ue900</span>",
     "on-click": "omarchy-menu",
+    "on-click-right": "omarchy-launch-terminal",
     "tooltip-format": "Omarchy Menu\n\nSuper + Alt + Space"
   },
   "custom/update": {
@@ -140,7 +141,7 @@
     "modules": ["custom/expand-icon", "tray"]
   },
   "custom/expand-icon": {
-    "format": "  ",
+    "format": "",
     "tooltip": false
   },
   "custom/screenrecording-indicator": {
