add clock to lockscreen, merge from Omarchy dev

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,5 +1,9 @@
 source = ~/.config/omarchy/current/theme/hyprlock.conf
 
+general {
+    ignore_empty_input = true
+}
+
 background {
     monitor =
     color = $color
@@ -34,7 +38,20 @@ input-field {
     fade_on_empty = false
 }
 
-# Keyboard LAYOUT
+# Clock
+label {
+    monitor =
+    text = $TIME
+    font_family = CaskaydiaMono Nerd Font Propo
+    font_color = $font_color
+    font_size = 48
+    position = 0, 240
+    halign = center
+    valign = center
+    update_interval = 1
+}
+
+# Keyboard Layout
 label {
     monitor =
     text = $LAYOUT
