--- a/hypr/monitors.conf
+++ b/hypr/monitors.conf
@@ -18,14 +18,18 @@
 # monitor = DP-5, 6016x3384@60, auto, 2
 # monitor = eDP-1, 2880x1920@120, auto, 2
 
-env = GDK_SCALE,1
+env = GDK_SCALE,2
 
 # ==========================
 # Monitor configuration
 # ==========================
 
 # Left monitor (U2722DE)
-monitor=desc:Dell Inc. DELL U2722DE,2560x1440@60,0x0,1
+monitor = desc:Dell Inc. DELL U2722DE, 2560x1440@60, auto, 1.066667
 
 # Right monitor (U2721DE)
-monitor=desc:Dell Inc. DELL U2721DE,2560x1440@60,2560x0,1
+monitor = desc:Dell Inc. DELL U2721DE, 2560x1440@60, auto, 1.066667
+
+# @Garmin Wue office
+monitor = DP-7, 3840x2160@60, auto, auto
+monitor = DP-8, 3840x2160@60, auto, auto
