--- a/hypr/monitors.conf
+++ b/hypr/monitors.conf
@@ -24,6 +24,9 @@ env = GDK_SCALE,2
 # Monitor configuration
 # ==========================
 
+# Dell XPS13
+monitor = desc:AU Optronics, 1920x1080@60, auto, auto
+
 # Left monitor (U2722DE)
 monitor = desc:Dell Inc. DELL U2722DE, 2560x1440@60, auto, 1.066667
 
