revert git config email change

--- a/git/config
+++ b/git/config
@@ -1,6 +1,6 @@
 [user]
   name = Stefan Gründel
-  email = stefan.gruendel@gmail.com
+  email = 530272+sgruendel@users.noreply.github.com
 
 [alias]
   co = checkout
