--- a/hypr/monitors.conf
+++ b/hypr/monitors.conf
@@ -3,12 +3,12 @@
 # Format: monitor = [port], resolution, position, scale
 
 # Optimized for retina-class 2x displays, like 13" 2.8K, 27" 5K, 32" 6K.
-#env = GDK_SCALE,2
-#monitor=,preferred,auto,auto
+env = GDK_SCALE,2
+# monitor=,preferred,auto,auto
 
 # Good compromise for 27" or 32" 4K monitors (but fractional!)
 # env = GDK_SCALE,1.75
-# monitor=,preferred,auto,1.666667
+# monitor=,preferred,auto,1.6
 
 # Straight 1x setup for low-resolution displays like 1080p or 1440p
 # env = GDK_SCALE,1
@@ -18,8 +18,6 @@
 # monitor = DP-5, 6016x3384@60, auto, 2
 # monitor = eDP-1, 2880x1920@120, auto, 2
 
-env = GDK_SCALE,2
-
 # ==========================
 # Monitor configuration
 # ==========================
@@ -28,11 +26,23 @@ env = GDK_SCALE,2
 monitor = desc:AU Optronics, 1920x1080@60, auto, auto
 
 # Left monitor (U2722DE)
-monitor = desc:Dell Inc. DELL U2722DE, 2560x1440@60, auto, 1.066667
+monitor = desc:Dell Inc. DELL P2725QE 4GVXPB4, 3840x2160@100, auto, auto
 
 # Right monitor (U2721DE)
-monitor = desc:Dell Inc. DELL U2721DE, 2560x1440@60, auto, 1.066667
+monitor = desc:Dell Inc. DELL P2725QE 45BXPB4, 3840x2160@100, auto, auto
 
 # @Garmin Wue office
-monitor = DP-7, 3840x2160@60, auto, auto
-monitor = DP-8, 3840x2160@60, auto, auto
+#monitor = DP-7, 3840x2160@60, auto, auto
+#monitor = DP-8, 3840x2160@60, auto, auto
+
+workspace = 1, monitor:DP-7, persistent:true
+workspace = 2, monitor:DP-7, persistent:true
+workspace = 4, monitor:DP-7, persistent:true
+workspace = 6, monitor:DP-7, persistent:true
+workspace = 8, monitor:DP-7, persistent:true
+workspace = 10, monitor:DP-7, persistent:true
+
+workspace = 3, monitor:DP-8, persistent:true
+workspace = 5, monitor:DP-8, persistent:true
+workspace = 7, monitor:DP-8, persistent:true
+workspace = 9, monitor:DP-8, persistent:true
