--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -27,6 +27,8 @@ bindd = SUPER SHIFT, P, Google Photos, exec, omarchy-launch-or-focus-webapp "Goo
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
 bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 
+bindd = SUPER CTRL, O, Sonos, exec, omarchy-launch-or-focus-tui sinuous -d 192.168.7.103,192.168.7.104
+
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
