--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -8,9 +8,10 @@
   "modules-center": ["clock", "custom/update", "custom/screenrecording-indicator"],
   "modules-right": [
     "group/tray-expander",
-    "hyprland/language",
     "bluetooth",
     "network",
+    "hyprland/language",
+    "custom/clipboard",
     "pulseaudio",
     "cpu",
     "battery"
@@ -57,6 +58,12 @@
     "tooltip-format": "Omarchy update available",
     "signal": 7,
     "interval": 21600
+  },
+  "custom/clipboard": {
+    "exec": "elephant-clipboard-state get",
+    "signal": 9,
+    "on-click": "elephant-clipboard-state toggle",
+    "on-click-right": "omarchy-launch-walker -m clipboard"
   },
 
   "cpu": {
