--- a/Code/settings.json
+++ b/Code/settings.json
@@ -1,6 +1,6 @@
 {
-  "workbench.colorTheme": "Catppuccin Frappé",
-  "workbench.iconTheme": "catppuccin-frappe",
+  "workbench.colorTheme": "Catppuccin Mocha",
+  "workbench.iconTheme": "catppuccin-mocha",
   "github.copilot.nextEditSuggestions.enabled": true,
   "[powershell]": {
     "debug.saveBeforeStart": "nonUntitledEditorsInActiveGroup",
@@ -18,78 +18,234 @@
   "vim.normalModeKeyBindingsNonRecursive": [
     // https://www.lazyvim.org/keymaps#snacksnvim
     {
-      "before": ["<leader>", "<space>"],
-      "commands": ["workbench.action.files.openFile"]
+      "before": [
+        "<leader>",
+        "<space>"
+      ],
+      "commands": [
+        "workbench.action.files.openFile"
+      ]
     },
     {
-      "before": ["<leader>", ","],
-      "commands": ["workbench.action.quickOpen"]
+      "before": [
+        "<leader>",
+        ","
+      ],
+      "commands": [
+        "workbench.action.quickOpen"
+      ]
     },
     {
-      "before": ["<leader>", "/"],
-      "commands": ["workbench.action.findInFiles"]
+      "before": [
+        "<leader>",
+        "/"
+      ],
+      "commands": [
+        "workbench.action.findInFiles"
+      ]
     },
     {
-      "before": ["<leader>", "e"],
-      "commands": ["workbench.view.explorer"]
+      "before": [
+        "<leader>",
+        "e"
+      ],
+      "commands": [
+        "workbench.view.explorer"
+      ]
     },
     {
-      "before": ["<leader>", "f", "b"],
-      "commands": ["workbench.action.quickOpen"]
+      "before": [
+        "<leader>",
+        "f",
+        "b"
+      ],
+      "commands": [
+        "workbench.action.quickOpen"
+      ]
     },
     {
-      "before": ["<leader>", "f", "B"],
-      "commands": ["workbench.action.quickOpen"]
+      "before": [
+        "<leader>",
+        "f",
+        "B"
+      ],
+      "commands": [
+        "workbench.action.quickOpen"
+      ]
     },
     {
-      "before": ["<leader>", "f", "e"],
-      "commands": ["workbench.view.explorer"]
+      "before": [
+        "<leader>",
+        "f",
+        "e"
+      ],
+      "commands": [
+        "workbench.view.explorer"
+      ]
     },
     {
-      "before": ["<leader>", "f", "E"],
-      "commands": ["workbench.view.explorer"]
+      "before": [
+        "<leader>",
+        "f",
+        "E"
+      ],
+      "commands": [
+        "workbench.view.explorer"
+      ]
     },
     {
-      "before": ["<leader>", "f", "f"],
-      "commands": ["workbench.action.files.openFile"]
+      "before": [
+        "<leader>",
+        "f",
+        "f"
+      ],
+      "commands": [
+        "workbench.action.files.openFile"
+      ]
     },
     {
-      "before": ["<leader>", "f", "F"],
-      "commands": ["workbench.action.files.openFile"]
+      "before": [
+        "<leader>",
+        "f",
+        "F"
+      ],
+      "commands": [
+        "workbench.action.files.openFile"
+      ]
     },
     {
-      "before": ["<leader>", "f", "r"],
-      "commands": ["workbench.action.quickOpenRecent"]
+      "before": [
+        "<leader>",
+        "f",
+        "r"
+      ],
+      "commands": [
+        "workbench.action.quickOpenRecent"
+      ]
     },
     // git
     {
-      "before": ["<leader>", "g", "b"],
-      "commands": ["git.blame.toggleEditorDecoration"]
+      "before": [
+        "<leader>",
+        "g",
+        "b"
+      ],
+      "commands": [
+        "git.blame.toggleEditorDecoration"
+      ]
     },
     {
-      "before": ["<leader>", "g", "d"],
-      "commands": ["gitlens.diffWithPrevious"]
+      "before": [
+        "<leader>",
+        "g",
+        "d"
+      ],
+      "commands": [
+        "gitlens.diffWithPrevious"
+      ]
     },
     {
-      "before": ["<leader>", "g", "D"],
-      "commands": ["gitlens.diffWithWorking"]
+      "before": [
+        "<leader>",
+        "g",
+        "D"
+      ],
+      "commands": [
+        "gitlens.diffWithWorking"
+      ]
     },
     {
-      "before": ["<leader>", "g", "g"],
-      "commands": ["workbench.view.scm"]
+      "before": [
+        "<leader>",
+        "g",
+        "g"
+      ],
+      "commands": [
+        "workbench.view.scm"
+      ]
     },
     {
-      "before": ["<leader>", "g", "G"],
-      "commands": ["workbench.view.scm"]
+      "before": [
+        "<leader>",
+        "g",
+        "G"
+      ],
+      "commands": [
+        "workbench.view.scm"
+      ]
     },
-
-    { "before": ["H"], "commands": ["workbench.action.previousEditor"] },
-    { "before": ["L"], "commands": ["workbench.action.nextEditor"] }
+    // LSP https://www.lazyvim.org/keymaps#lsp
+    {
+      "before": [
+        "g",
+        "y"
+      ],
+      "commands": [
+        "editor.action.goToTypeDefinition"
+      ]
+    },
+    {
+      "before": [
+        "g",
+        "r"
+      ],
+      "commands": [
+        "editor.action.goToReferences"
+      ]
+    },
+    {
+      "before": [
+        "g",
+        "I"
+      ],
+      "commands": [
+        "editor.action.goToImplementation"
+      ]
+    },
+    {
+      "before": [
+        "<leader>",
+        "c",
+        "R"
+      ],
+      "commands": [
+        "git.rename"
+      ]
+    },
+    {
+      "before": [
+        "<leader>",
+        "c",
+        "r"
+      ],
+      "commands": [
+        "editor.action.rename"
+      ]
+    },
+    {
+      "before": [
+        "H"
+      ],
+      "commands": [
+        "workbench.action.previousEditor"
+      ]
+    },
+    {
+      "before": [
+        "L"
+      ],
+      "commands": [
+        "workbench.action.nextEditor"
+      ]
+    }
   ],
   "vim.smartRelativeLine": true,
   "vim.statusBarColorControl": true,
   //"vim.statusBarColors.normal": ["#8FBCBB", "#434C5E"],
-  "vim.statusBarColors.normal": ["#89a5e8", "#292b3b"],
+  "vim.statusBarColors.normal": [
+    "#89a5e8",
+    "#292b3b"
+  ],
   "vim.statusBarColors.insert": "#a2ca86",
   "vim.statusBarColors.visual": "#c599e0",
   "vim.statusBarColors.visualline": "#B48EAD",
