--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -27,7 +27,7 @@ bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
 bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 
 bindd = SUPER CTRL, O, Sonos, exec, omarchy-launch-or-focus-tui sinuous -d 192.168.7.103,192.168.7.104
-bindd = SUPER CTRL, P, Color picker, Color picker, exec, pkill hyprpicker || hyprpicker -a
+bindd = SUPER CTRL, P, Color picker, exec, pkill hyprpicker || hyprpicker -a
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
