--- a/solaar/rules.yaml
+++ b/solaar/rules.yaml
@@ -1,7 +1,7 @@
 %YAML 1.3
 ---
 - Key: [Dictation, pressed]
-- Execute: xournalpp
+- Execute: omarchy-voxtype-model
 ...
 ---
 - Key: [Emoji, pressed]
@@ -25,11 +25,11 @@
 ...
 ---
 - Key: [Volume Down, pressed]
-- Execute: [pamixer, -d, '5']
+- Execute: [pamixer, -d, "5"]
 ...
 ---
 - Key: [Volume Up, pressed]
-- Execute: [pamixer, -i, '5']
+- Execute: [pamixer, -i, "5"]
 ...
 ---
 - Key: [Calculator, pressed]
