--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -20,6 +20,6 @@ source = ~/.config/hypr/looknfeel.conf
 source = ~/.config/hypr/autostart.conf
 
 # Add any other personal Hyprland configuration below
-# windowrule = workspace 5, class:qemu
+# windowrule = workspace 5, match:class qemu
 
 windowrule = tag +floating-window, match:class org.omarchy.sinuous
