add separate headset icon in waybar from Omarchy dev branch

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -150,6 +150,7 @@
     "format-muted": "",
     "format-icons": {
       "headphone": "",
+      "headset": "",
       "default": ["", "", ""]
     }
   },
