--- a/Code/settings.json
+++ b/Code/settings.json
@@ -7,6 +7,8 @@
     "editor.semanticHighlighting.enabled": false,
     "editor.wordSeparators": "`~!@#$%^&*()=+[{]}\\|;:'\",.<>/?"
   },
+  "python.defaultInterpreterPath": ".venv/bin/python",
+  "python.terminal.activateEnvironment": true,
   "files.autoSave": "onWindowChange",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
@@ -16,51 +18,6 @@
   "vim.useSystemClipboard": true,
   // my stuff based on LazyVim keymaps
   "vim.normalModeKeyBindingsNonRecursive": [
-    // https://www.lazyvim.org/keymaps#snacksnvim
-    {
-      "before": ["<leader>", "<space>"],
-      "commands": ["workbench.action.files.openFile"]
-    },
-    {
-      "before": ["<leader>", ","],
-      "commands": ["workbench.action.quickOpen"]
-    },
-    {
-      "before": ["<leader>", "/"],
-      "commands": ["workbench.action.findInFiles"]
-    },
-    {
-      "before": ["<leader>", "e"],
-      "commands": ["workbench.view.explorer"]
-    },
-    {
-      "before": ["<leader>", "f", "b"],
-      "commands": ["workbench.action.quickOpen"]
-    },
-    {
-      "before": ["<leader>", "f", "B"],
-      "commands": ["workbench.action.quickOpen"]
-    },
-    {
-      "before": ["<leader>", "f", "e"],
-      "commands": ["workbench.view.explorer"]
-    },
-    {
-      "before": ["<leader>", "f", "E"],
-      "commands": ["workbench.view.explorer"]
-    },
-    {
-      "before": ["<leader>", "f", "f"],
-      "commands": ["workbench.action.files.openFile"]
-    },
-    {
-      "before": ["<leader>", "f", "F"],
-      "commands": ["workbench.action.files.openFile"]
-    },
-    {
-      "before": ["<leader>", "f", "r"],
-      "commands": ["workbench.action.quickOpenRecent"]
-    },
     // General https://www.lazyvim.org/keymaps#general
     {
       "before": ["H"],
@@ -109,6 +66,51 @@
     {
       "before": ["]", "w"],
       "commands": ["editor.action.marker.next"]
+    },
+    // https://www.lazyvim.org/keymaps#snacksnvim
+    {
+      "before": ["<leader>", "<space>"],
+      "commands": ["workbench.action.files.openFile"]
+    },
+    {
+      "before": ["<leader>", ","],
+      "commands": ["workbench.action.quickOpen"]
+    },
+    {
+      "before": ["<leader>", "/"],
+      "commands": ["workbench.action.findInFiles"]
+    },
+    {
+      "before": ["<leader>", "e"],
+      "commands": ["workbench.view.explorer"]
+    },
+    {
+      "before": ["<leader>", "f", "b"],
+      "commands": ["workbench.action.quickOpen"]
+    },
+    {
+      "before": ["<leader>", "f", "B"],
+      "commands": ["workbench.action.quickOpen"]
+    },
+    {
+      "before": ["<leader>", "f", "e"],
+      "commands": ["workbench.view.explorer"]
+    },
+    {
+      "before": ["<leader>", "f", "E"],
+      "commands": ["workbench.view.explorer"]
+    },
+    {
+      "before": ["<leader>", "f", "f"],
+      "commands": ["workbench.action.files.openFile"]
+    },
+    {
+      "before": ["<leader>", "f", "F"],
+      "commands": ["workbench.action.files.openFile"]
+    },
+    {
+      "before": ["<leader>", "f", "r"],
+      "commands": ["workbench.action.quickOpenRecent"]
     },
     // git
     {
