add hyprland windowrules for Bitwarden Chrome extension

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,3 +23,5 @@ source = ~/.config/hypr/autostart.conf
 # windowrule = workspace 5, match:class qemu
 
 windowrule = tag +floating-window, match:class org.omarchy.sinuous
+windowrule = no_screen_share on, match:class chrome-nngceckbapebfimnlniiiahkandclblb-Default
+windowrule = tag +floating-window, match:class chrome-nngceckbapebfimnlniiiahkandclblb-Default
